# FuckerToolkit

./: .gitignore  CMakeLists.txt  README.md  build.zig
.github/scripts/: check_macho_header.py
.github/workflows/: build.yml
examples/: init.lua  init_auto_smoke.lua  init_hook_selftest.lua  init_image_diagnose.lua
include/ftk/core/: bootstrap.hpp
include/ftk/hook/: hook_engine.hpp
include/ftk/lua/: api_bridge.hpp  lua_context.hpp
include/ftk/pal/: memory_manager.hpp  path_resolver.hpp
include/ftk/vfs/: vfs.hpp
src/: apple_constructor.c  apple_hook_shim.c  bootstrap.zig  entry.zig  ftk.zig  hook.zig  hook_selftest.zig  hook_selftest_targets.c  image.zig  logger.zig  lua_runtime.zig  memory.zig  pal.zig  vfs.zig  windows_entry.c
src/app_entry/: android_entry.cpp  apple_entry.cpp  posix_entry.cpp  windows_entry.cpp
src/core/: bootstrap.cpp
src/hook/: minhook_engine.cpp  shadowhook_engine.cpp  tinyhook_engine.cpp
src/lua/: api_bridge.cpp  lua_context.cpp
src/pal/: memory_manager.cpp  path_resolver.cpp
src/vfs/: vfs.cpp
tests/: smoke_main.cpp
